--- a/.github/workflows/publish_shiny_app.yml
+++ b/.github/workflows/publish_shiny_app.yml
@@ -1,29 +1,49 @@
-name: Deploy to shinyapps.io
+name: R-CMD-check and Deploy to shinyapps.io
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
+  R-CMD-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: r-lib/actions/setup-r@v2
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libcurl4-openssl-dev libxml2-dev libssl-dev
+      - name: Install R packages
+        run: |
+          install.packages(c("remotes", "covr"))
+      - name: Check
+        run: |
+          R CMD build .
+          R CMD check *tar.gz
+
   deploy:
     runs-on: ubuntu-latest
-
+    needs: R-CMD-check
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Setup R
-      uses: r-lib/actions/setup-r@v1
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
 
-    - name: Install dependencies
-      run: |
-        R -e 'install.packages(c("shiny", "rsconnect"))'
+      - name: Install dependencies
+        run: |
+          R -e 'install.packages(c("shiny", "rsconnect"))'
 
-    - name: Deploy to shinyapps.io
-      run: |
-        R -e 'rsconnect::setAccountInfo(name = "<ACCOUNT_NAME>", token = Sys.getenv("SHINYAPPS_TOKEN"), secret = Sys.getenv("SHINYAPPS_SECRET"))'
-        R -e 'rsconnect::deployApp(appDir = "shinyapp/", appName = "your_app_name", account = "<ACCOUNT_NAME>")'
-      env:
-        SHINYAPPS_TOKEN: ${{ secrets.SHINYAPPS_TOKEN }}
-        SHINYAPPS_SECRET: ${{ secrets.SHINYAPPS_SECRET }}
+      - name: Deploy to shinyapps.io
+        run: |
+          R -e 'rsconnect::setAccountInfo(name = "<ACCOUNT_NAME>", token = Sys.getenv("SHINYAPPS_TOKEN"), secret = Sys.getenv("SHINYAPPS_SECRET"))'
+          R -e 'rsconnect::deployApp(appDir = "shinyapp/", appName = "your_app_name", account = "<ACCOUNT_NAME>")'
+        env:
+          SHINYAPPS_TOKEN: ${{ secrets.SHINYAPPS_TOKEN }}
+          SHINYAPPS_SECRET: ${{ secrets.SHINYAPPS_SECRET }}
