--- a/.github/workflows/publish_shiny_app.yml
+++ b/.github/workflows/publish_shiny_app.yml
@@ -20,7 +20,8 @@ jobs:
           sudo apt-get install -y libcurl4-openssl-dev libxml2-dev libssl-dev
       - name: Install R packages
         run: |
-          install.packages(c("remotes", "covr"))
+          R -e 'install.packages(c("remotes", "covr"))'
+
       - name: Check
         run: |
           R CMD build .
