--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -35,9 +35,16 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: |
-            aidan2b/adr-detection:latest
-            ghcr.io/${{ github.repository }}
+            images: |
+              aidan2b/adr-detection
+              ghcr.io/${{ github.repository }}
+            tags: |
+              type=ref,event=branch
+              type=ref,event=tag
+              type=semver,pattern={{version}}
+              type=semver,pattern={{major}}.{{minor}}
+              type=semver,pattern={{major}}
+
       
       - name: Build and push Docker images
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
