--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -1,11 +1,11 @@
 name: Build, Push, and Deploy
 
 on:
-  push:
-    branches:
-      - main
-  release:
-    types: [published]
+  workflow_dispatch:
+    inputs:
+      image_tag:
+        description: 'Docker image tag (e.g., latest, v1, v1-large)'
+        required: true
 
 jobs:
   docker_push:
@@ -35,15 +35,10 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-            images: |
-              aidan2b/adr-detection
-              ghcr.io/${{ github.repository }}
-            tags: |
-              type=ref,event=branch
-              type=ref,event=tag
-              type=semver,pattern={{version}}
-              type=semver,pattern={{major}}.{{minor}}
-              type=semver,pattern={{major}}
+          images: |
+            aidan2b/adr-detection
+            ghcr.io/${{ github.repository }}
+          tags: ${{ github.event.inputs.image_tag }}
 
       
       - name: Build and push Docker images
