--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -65,7 +65,7 @@ jobs:
           sudo apt-get install -y libcurl4-openssl-dev libxml2-dev libssl-dev
       - name: Install R packages
         run: |
-          R -e 'install.packages(c("remotes", "covr"))'
+          R -e 'install.packages(c("remotes", "covr", "rsconnect"))'
       - name: Deploy to shinyapps.io
         run: |
           R -e 'rsconnect::setAccountInfo(name = "<ACCOUNT_NAME>", token = Sys.getenv("SHINYAPPS_TOKEN"), secret = Sys.getenv("SHINYAPPS_SECRET"))'
