--- a/.github/workflows/shiny-deploy.yml
+++ b/.github/workflows/shiny-deploy.yml
@@ -14,6 +14,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
+      - name: Set up Git LFS
+        run: |
+          git lfs install
+          git lfs pull
+      
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
