--- a/.github/workflows/shiny-deploy.yml
+++ b/.github/workflows/shiny-deploy.yml
@@ -12,7 +12,14 @@ jobs:
     name: Run Pipeline
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Install Git LFS
+        run: |
+          sudo apt-get install git-lfs
+
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          lfs: true
       
       - name: Set up Git LFS
         run: |
