Tinkering with shiny-deploy

--- a/.github/workflows/shiny-deploy.yml
+++ b/.github/workflows/shiny-deploy.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Set up Git LFS
         run: |
           git lfs install
+          git lfs fetch
           git lfs pull
       
       - name: Set up Python
