--- a/.github/workflows/shiny-deploy.yml
+++ b/.github/workflows/shiny-deploy.yml
@@ -16,6 +16,12 @@ jobs:
         run: |
           sudo apt-get install git-lfs
 
+      - name: Install Python 3.8
+        run: |
+          sudo add-apt-repository ppa:deadsnakes/ppa -y
+          sudo apt-get update
+          sudo apt-get install python3.8 python3.8-venv python3.8-dev -y
+
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
