--- a/.github/workflows/shiny-deploy.yml
+++ b/.github/workflows/shiny-deploy.yml
@@ -10,18 +10,7 @@ on:
 jobs:
   run_pipeline:
     name: Run Pipeline
-    runs-on: [self-hosted, cml, gpu]  # Update this line to use self-hosted runner with GPU
-    steps:
-      - name: Install Git LFS
-        run: |
-          sudo apt-get install git-lfs
-
-      - name: Install Python 3.8
-        run: |
-          sudo add-apt-repository ppa:deadsnakes/ppa -y
-          sudo apt-get update
-          sudo apt-get install python3.8 python3.8-venv python3.8-dev -y
-
+    runs-on: [self-hosted, cml, gpu]  
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
