--- a/.github/workflows/shiny-deploy.yml
+++ b/.github/workflows/shiny-deploy.yml
@@ -35,8 +35,8 @@ jobs:
       
       - name: Install Python dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python -m pip install --upgrade pip --user
+          pip install -r requirements.txt --user
           python -m spacy download en_core_web_md
       
       - name: Run pipeline
