edits to shiny-deploy

--- a/.github/workflows/shiny-deploy.yml
+++ b/.github/workflows/shiny-deploy.yml
@@ -49,7 +49,7 @@ jobs:
 
   deploy_shiny:
     name: Deploy to shinyapps.io
-    runs-on: ubuntu-latest  
+    runs-on: [self-hosted, cml, gpu]  
     needs: run_pipeline
     steps:
       - uses: actions/checkout@v2
@@ -66,7 +66,7 @@ jobs:
       - name: Deploy to shinyapps.io
         run: |
           R -e 'rsconnect::setAccountInfo(name = "my_shinyapps_account", token = Sys.getenv("SHINYAPPS_TOKEN"), secret = Sys.getenv("SHINYAPPS_SECRET"))'
-          R -e 'rsconnect::deployApp(appDir = "shinyapp/", appName = "your_app_name", account = "my_shinyapps_account")'
+          R -e 'rsconnect::deployApp(appDir = "shinyapp/", appName = "adr-detection", account = "aidan2b")'
         env:
           SHINYAPPS_TOKEN: ${{ secrets.SHINYAPPS_TOKEN }}
           SHINYAPPS_SECRET: ${{ secrets.SHINYAPPS_SECRET }}
