--- a/.github/workflows/shiny-deploy.yml
+++ b/.github/workflows/shiny-deploy.yml
@@ -57,11 +57,11 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
       
-      # - name: Install R dependencies
-      #  run: |
-      #    sudo apt-get update
-      #    sudo apt-get install -y libcurl4-openssl-dev libxml2-dev libssl-dev
-      #    R -e 'install.packages(c("remotes", "covr", "rsconnect"))'
+       - name: Install R dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libcurl4-openssl-dev libxml2-dev libssl-dev
+          R -e 'install.packages(c("remotes", "covr", "rsconnect"))'
           
       - name: Deploy to shinyapps.io
         run: |
