--- a/.github/workflows/shiny-deploy.yml
+++ b/.github/workflows/shiny-deploy.yml
@@ -51,19 +51,18 @@ jobs:
     name: Deploy to shinyapps.io
     runs-on: [self-hosted, cml, gpu]  
     needs: run_pipeline
-    env:
-      R_VERSION: 4.1
     steps:
       - uses: actions/checkout@v2
-
-      - name: Set up R environment
+      
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+      
+      - name: Install R dependencies
         run: |
-          echo 'R_LIBS_USER=~/R/library' >> $GITHUB_ENV
-
-      - name: Install R packages
-        run: |
-          R -e 'install.packages(c("remotes", "covr", "rsconnect", "RColorBrewer", "Rcpp", "RcppTOML", "base64enc", "bslib", "cachem", "cli", "colorspace", "commonmark", "cpp11"), repos="http://cran.rstudio.com/", lib="~/R/library", dependencies=TRUE)'
-        
+          sudo apt-get update
+          sudo apt-get install -y libcurl4-openssl-dev libxml2-dev libssl-dev
+          R -e 'install.packages(c("remotes", "covr", "rsconnect", "RColorBrewer", "Rcpp", "RcppTOML", "base64enc", "bslib", "cachem", "cli", "colorspace", "commonmark", "cpp11"))'
+          
       - name: Deploy to shinyapps.io
         run: |
           R -e 'rsconnect::setAccountInfo(name = "aidan2b", token = Sys.getenv("SHINYAPPS_TOKEN"), secret = Sys.getenv("SHINYAPPS_SECRET"))'
