--- a/.github/workflows/shiny-deploy.yml
+++ b/.github/workflows/shiny-deploy.yml
@@ -76,12 +76,12 @@ jobs:
       - name: Install R packages
         run: |
           mkdir -p ~/.R/library
-          R -e ".libPaths('~/.R/library'); install.packages(c('remotes', 'covr', 'rsconnect', 'RColorBrewer', 'Rcpp', 'RcppTOML', 'base64enc', 'bslib', 'cachem', 'cli', 'colorspace', 'commonmark', 'cpp11', 'crosstalk', 'data.table', 'dplyr', 'evaluate', 'fansi', 'farver', 'fontawesome', 'generics', 'ggplot2', 'glue', 'here', 'highr', 'htmlwidgets', 'httpuv', 'knitr', 'later', 'plotly', 'png', 'promises', 'purrr', 'reticulate', 'shiny', 'shinyWidgets', 'tidyr', 'tibble', 'htmltools'), lib='~/.R/library', repos='https://cran.rstudio.com/')"
+          R -e ".libPaths('$HOME/.R/library'); install.packages(c('remotes', 'covr', 'rsconnect', 'RColorBrewer', 'Rcpp', 'RcppTOML', 'base64enc', 'bslib', 'cachem', 'cli', 'colorspace', 'commonmark', 'cpp11', 'crosstalk', 'data.table', 'dplyr', 'evaluate', 'fansi', 'farver', 'fontawesome', 'generics', 'ggplot2', 'glue', 'here', 'highr', 'htmlwidgets', 'httpuv', 'knitr', 'later', 'plotly', 'png', 'promises', 'purrr', 'reticulate', 'shiny', 'shinyWidgets', 'tidyr', 'tibble', 'htmltools'), lib='~/.R/library', repos='https://cran.rstudio.com/')"
 
       - name: Deploy to shinyapps.io
         run: |
-          R -e '.libPaths('~/.R/library'); rsconnect::setAccountInfo(name = "aidan2b", token = Sys.getenv("SHINYAPPS_TOKEN"), secret = Sys.getenv("SHINYAPPS_SECRET"))'
-          R -e '.libPaths('~/.R/library'); rsconnect::deployApp(appDir = "shiny_app/", appName = "adr-detection", account = "aidan2b")'
+          R -e '.libPaths('$HOME/.R/library'); rsconnect::setAccountInfo(name = "aidan2b", token = Sys.getenv("SHINYAPPS_TOKEN"), secret = Sys.getenv("SHINYAPPS_SECRET"))'
+          R -e '.libPaths('$HOME/.R/library'); rsconnect::deployApp(appDir = "shiny_app/", appName = "adr-detection", account = "aidan2b")'
         env:
           SHINYAPPS_TOKEN: ${{ secrets.SHINYAPPS_TOKEN }}
           SHINYAPPS_SECRET: ${{ secrets.SHINYAPPS_SECRET }}
