--- a/.github/workflows/shiny-deploy.yml
+++ b/.github/workflows/shiny-deploy.yml
@@ -80,10 +80,11 @@ jobs:
 
       - name: Deploy to shinyapps.io
         run: |
-          R -e '.libPaths('$HOME/adr-detection/.R/library'); rsconnect::setAccountInfo(name = "aidan2b", token = Sys.getenv("SHINYAPPS_TOKEN"), secret = Sys.getenv("SHINYAPPS_SECRET"))'
-          R -e '.libPaths('$HOME/adr-detection/.R/library'); rsconnect::deployApp(appDir = "shiny_app/", appName = "adr-detection", account = "aidan2b")'
+          R -e ".libPaths('$HOME/adr-detection/.R/library'); rsconnect::setAccountInfo(name = 'aidan2b', token = Sys.getenv('SHINYAPPS_TOKEN'), secret = Sys.getenv('SHINYAPPS_SECRET'))"
+          R -e ".libPaths('$HOME/adr-detection/.R/library'); rsconnect::deployApp(appDir = 'shiny_app/', appName = 'adr-detection', account = 'aidan2b')"
         env:
           SHINYAPPS_TOKEN: ${{ secrets.SHINYAPPS_TOKEN }}
           SHINYAPPS_SECRET: ${{ secrets.SHINYAPPS_SECRET }}
+
 
 
