--- a/.github/workflows/shiny-deploy.yml
+++ b/.github/workflows/shiny-deploy.yml
@@ -33,12 +33,6 @@ jobs:
         with:
           python-version: 3.8
       
-      # - name: Install Python dependencies
-      #   run: |
-      #     python -m pip install --upgrade pip --user
-      #     pip install -r requirements.txt --user
-      #     python -m spacy download en_core_web_md
-      
       - name: Run pipeline
         run: |
           python run_pipeline.py
@@ -54,30 +48,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # - name: Install system dependencies
-      #   run: |
-      #     sudo apt-get update -qq && \
-      #     sudo apt-get -y --no-install-recommends install \
-      #       libcurl4-openssl-dev \
-      #       libssl-dev \
-      #       libxml2-dev \
-      #       libssh2-1-dev \
-      #       libpq-dev && \
-      #     sudo apt-get clean && \
-      #     sudo rm -rf /var/lib/apt/lists/*
-
-      # - name: Install R
-      #   run: |
-      #     echo 'deb https://cloud.r-project.org/bin/linux/ubuntu focal-cran40/' | sudo tee /etc/apt/sources.list.d/cran.list && \
-      #     sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9 && \
-      #     sudo apt-get update && \
-      #     sudo apt-get install -y --no-install-recommends r-base
-
-      # - name: Install R packages
-      #   run: |
-      #     mkdir -p $HOME/adr-detection/.R/library
-      #     R -e ".libPaths('$HOME/adr-detection/.R/library'); install.packages(c('remotes', 'covr', 'rsconnect', 'RColorBrewer', 'Rcpp', 'RcppTOML', 'base64enc', 'bslib', 'cachem', 'cli', 'colorspace', 'commonmark', 'cpp11', 'crosstalk', 'data.table', 'dplyr', 'evaluate', 'fansi', 'farver', 'fontawesome', 'generics', 'ggplot2', 'glue', 'here', 'highr', 'htmlwidgets', 'httpuv', 'knitr', 'later', 'plotly', 'png', 'promises', 'purrr', 'reticulate', 'shiny', 'shinyWidgets', 'tidyr', 'tibble', 'htmltools'), lib='$HOME/adr-detection/.R/library', repos='https://cran.rstudio.com/')"
-
       - name: Deploy to shinyapps.io
         run: |
           R -e ".libPaths('$HOME/adr-detection/.R/library'); rsconnect::setAccountInfo(name = 'aidan2b', token = Sys.getenv('SHINYAPPS_TOKEN'), secret = Sys.getenv('SHINYAPPS_SECRET'))"
@@ -85,6 +55,12 @@ jobs:
         env:
           SHINYAPPS_TOKEN: ${{ secrets.SHINYAPPS_TOKEN }}
           SHINYAPPS_SECRET: ${{ secrets.SHINYAPPS_SECRET }}
+
+      - name: Commit and push linked_data.csv
+        run: |
+          git add shiny_app/linked_data.csv
+          git commit -m "Update linked_data.csv"
+          git push
 
 
 
