--- a/.github/workflows/shiny-deploy.yml
+++ b/.github/workflows/shiny-deploy.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add shiny_app/linked_data.csv
+          git add adr-detection/shiny_app/linked_data.csv
           git commit -m "Update linked_data.csv"
           git push  
 
