smoothing out live medication switching

--- a/.github/workflows/shiny-deploy.yml
+++ b/.github/workflows/shiny-deploy.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       medication:
         description: 'Enter medication name:'
-        required: true
+        required: false
 
 jobs:
   run_pipeline:
@@ -60,12 +60,12 @@ jobs:
         run: |
           git pull
 
-      - name: Use GitHub API
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Trigger workflow_dispatch event
         run: |
-          gh auth login --with-token <<< "${GITHUB_TOKEN}"
-          gh api /octocat
+          gh auth login --with-token <<< "${MY_GITHUB_TOKEN}"
+          gh api repos/:owner/:repo/actions/workflows/shiny-deploy.yml/dispatches \
+            --header "Accept: application/vnd.github.v3+json" \
+            -X POST \
 
       - name: Deploy to shinyapps.io
         run: |
