--- a/.github/workflows/shiny-deploy.yml
+++ b/.github/workflows/shiny-deploy.yml
@@ -46,7 +46,8 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add shiny_app/linked_data.csv
-          git commit -m "Update linked_data.csv"
+          git add shiny_app/faers.csv
+          git commit -m "Update linked_data.csv and faers.csv"
           git push  
 
   deploy_shiny:
