--- a/.github/workflows/deploy-k8s.yml
+++ b/.github/workflows/deploy-k8s.yml
@@ -32,6 +32,13 @@ jobs:
           --remote-name
         chmod +x kubectl
         sudo mv kubectl /usr/local/bin/
+    
+    - name: Debug KUBECONFIG
+      run: |
+        echo "Contents of config file:"
+        cat config
+        echo "KUBECONFIG environment variable:"
+        echo $KUBECONFIG
 
     - name: Deploy to Kubernetes
       env:
