--- a/.github/workflows/deploy-k8s.yml
+++ b/.github/workflows/deploy-k8s.yml
@@ -17,10 +17,10 @@ jobs:
 
     - name: Set up kubeconfig
       env:
-        KUBECONFIG_CONTENT: ${{ secrets.KUBECONFIG }}
+        KUBECONFIG: ${{ secrets.KUBECONFIG_SECRET }}
       run: |
-        echo "$KUBECONFIG_SECRET" | base64 --decode > config.yaml
-        export KUBECONFIG=config.yaml
+        echo "$KUBECONFIG" | base64 --decode > config
+        export KUBECONFIG=config
 
     - name: Set up kubectl
       run: |
@@ -36,14 +36,14 @@ jobs:
     - name: Debug KUBECONFIG
       run: |
         echo "Contents of config file:"
-        cat config.yaml
+        cat config
         echo "KUBECONFIG environment variable:"
         echo $KUBECONFIG
 
     - name: Deploy to Kubernetes
       env:
         MEDICATION: ${{ github.event.inputs.medication }}
-        KUBECONFIG: config.yaml
+        KUBECONFIG: config
       run: |
         # Update the medication value in the adr-detection.yaml
         sed -i "s/ocrevus/$MEDICATION/" adr-detection.yaml
