--- a/.github/workflows/deploy-k8s.yml
+++ b/.github/workflows/deploy-k8s.yml
@@ -15,6 +15,13 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v2
 
+    - name: Set up kubeconfig
+      env:
+        KUBECONFIG: ${{ secrets.KUBECONFIG_SECRET }}
+      run: |
+        echo "$KUBECONFIG" | base64 --decode > config
+        export KUBECONFIG=config
+
     - name: Set up kubectl
       run: |
         # Set up kubectl with your desired version
@@ -25,14 +32,21 @@ jobs:
           --remote-name
         chmod +x kubectl
         sudo mv kubectl /usr/local/bin/
+    
+    - name: Debug KUBECONFIG
+      run: |
+        echo "Contents of config file:"
+        cat config
+        echo "KUBECONFIG environment variable:"
+        echo $KUBECONFIG
 
     - name: Deploy to Kubernetes
       env:
         MEDICATION: ${{ github.event.inputs.medication }}
+        KUBECONFIG: config
       run: |
         # Update the medication value in the adr-detection.yaml
         sed -i "s/ocrevus/$MEDICATION/" adr-detection.yaml
 
         # Apply the Kubernetes configuration
         kubectl apply -f adr-detection.yaml
-
