--- a/.github/workflows/deploy-k8s.yml
+++ b/.github/workflows/deploy-k8s.yml
@@ -9,34 +9,16 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
 
-    - name: Set up kubeconfig
-      env:
-        KUBECONFIG: ${{ secrets.KUBECONFIG_SECRET }}
-      run: |
-        echo "$KUBECONFIG" | base64 --decode > config
-        export KUBECONFIG=config
-
-    - name: Set up kubectl
-      run: |
-        # Set up kubectl with your desired version
-        VERSION=$(curl --silent https://storage.googleapis.com/kubernetes-release/release/stable.txt)
-        curl https://storage.googleapis.com/kubernetes-release/release/$VERSION/bin/linux/amd64/kubectl \
-          --progress-bar \
-          --location \
-          --remote-name
-        chmod +x kubectl
-        sudo mv kubectl /usr/local/bin
-
     - name: Deploy to Kubernetes
       env:
         MEDICATION: ${{ github.event.inputs.medication }}
-        KUBECONFIG: config
+
       run: |
         # Update the medication value in the adr-detection.yaml
         sed -i "s/ocrevus/$MEDICATION/" adr-detection.yaml
