appending csv results from new runs to csvs in pvc

--- a/adr-detection.yaml
+++ b/adr-detection.yaml
@@ -36,7 +36,8 @@ spec:
           # Run the pipeline script
           python run_pipeline.py
 
-          cp -r /shiny_app/* /data/
+          tail -n +2 /shiny_app/linked_data.csv >> /data/linked_data.csv
+          tail -n +2 /shiny_app/faers.csv >> /data/faers.csv
 
           # Deploy to shinyapps.io
           export PATH=$PATH:/usr/bin/R
